前端配置修改

--- a/src/main/webapp/resources/login.html
+++ b/src/main/webapp/resources/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset=utf-8>
+  <title>Title</title>
 </head>
 <body>
-  登录页
+  llllsdfsdfsdfdf
   <!-- built files will be auto injected -->
 </body>
 </html>
