--- a/src/main/webapp/resources/index.html
+++ b/src/main/webapp/resources/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>order-manager</title>
+    <title>任务管理系统</title>
   </head>
   <body>
     <div id="app"></div>
